--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,13 @@
-image: scalecommerce/xenial:1.12
-
 stages:
   - push2github
 
 push2github:
   stage: push2github
+  image: scalecommerce/focal-supervisord:1.5
+  tags:
+    - dind
   script:
-    - git push --quiet --mirror https://$GITHUB_TOKEN@github.com/ScaleCommerce/puppet-sc_ini.git
+    - git clone --mirror $CI_REPOSITORY_URL .git-mirror
+    - cd .git-mirror
+    - git remote set-url --push origin  https://$GITHUB_TOKEN@github.com/ScaleCommerce/$CI_PROJECT_NAME.git
+    - git push --quiet --mirror
